--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,6 @@
-# add_subdirectory(core)
-# add_subdirectory(conf)
+add_subdirectory(core)
+add_subdirectory(conf)
 add_subdirectory(xml)
-# add_subdirectory(scan)
+if(ENABLE_GUI)
+    add_subdirectory(scan)
+endif(ENABLE_GUI)
