--- a/src/xml/CMakeLists.txt
+++ b/src/xml/CMakeLists.txt
@@ -11,4 +11,4 @@ message(STATUS "LIBXML2_INCLUDE_DIR=${LIBXML2_INCLUDE_DIR}")
 include_directories(${LIBXML2_INCLUDE_DIR})
 message(STATUS "LIBXML2_LIBRARIES=${LIBXML2_LIBRARIES}")
 link_directories(${LIBXML2_LIBRARIES})
-target_link_libraries(dmlXml libxml2)
+target_link_libraries(dmlXml "${LIBXML2_LIBRARIES}\\libxml2.lib" dmlCore dmlConf)
