--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,12 @@ endif(ENABLE_GUI)
 include_directories(${DML_SOURCE_DIR}/include)
 link_directories(${LIBRARY_OUTPUT_PATH})
 
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
+set(CMAKE_DEBUG_POSTFIX "_debug")
+
 # Subdirectories
 add_subdirectory(src)
 add_subdirectory(application)
