--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,4 +1,3 @@
-add_executable(test_core test_core.cpp)
+add_executable(test_core test_core_video)
 target_link_libraries(test_core dmlCore)
-
 add_test(NAME test_core COMMAND test_core)
